# cc_config

./: CONFIG.bzl  MACROS.bzl  MODULE.bazel  README.adoc  RULES.bzl
test/: .bazelrc  BUILD.bazel  MODULE.bazel
